# satellite

./: .env  README.md  package-lock.json
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: main.ts
backend/: .env  Dockerfile  pyproject.toml  uvicorn.toml
backend/app/: main.py  settings.py  stac.py
infra/: docker-compose.yml
